infra/k8s-prod/backend-mysql-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-mysql-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-mysql
  template:
    metadata:
      labels:
        app: backend-mysql
    spec:
      containers:
        - name: backend-mysql
          image: mysql:5.7
          # 日本語もOKにするための設定
          args:
            - --character-set-server=utf8mb4
            - --collation-server=utf8mb4_unicode_ci
---
apiVersion: v1
kind: Service
metadata:
  name: backend-mysql-srv
spec:
  selector:
    app: backend-mysql
  ports:
    - name: db
      protocol: TCP
      port: 3306
      targetPort: 3306
