infra/k8s-prod/backend-phpmyadmin-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-phpmyadmin-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-phpmyadmin
  template:
    metadata:
      labels:
        app: backend-phpmyadmin
    spec:
      containers:
        - name: backend-phpmyadmin
          image: phpmyadmin/phpmyadmin
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: backend-phpmyadmin-srv
spec:
  selector:
    app: backend-phpmyadmin
  ports:
    - name: db
      protocol: TCP
      port: 80
      targetPort: 80
